17:11 25/09/2024 attempt implement force to svg

--- a/SCADA_client/web/index/index.html
+++ b/SCADA_client/web/index/index.html
@@ -20,7 +20,8 @@
     </nav>
 
     <main>
-        <object data="./SVGARROYO.svg" type="image/svg+xml" id="ControlPanelSVG"></object>
+        <object data="./svg-scada-arroyo.svg" type="image/svg+xml" id="ControlPanelSVG"></object>
+        <div id="force-symbols"></div>
     </main>
 </body>
 </html>
