--- a/SCADA_client/web/index/index.html
+++ b/SCADA_client/web/index/index.html
@@ -6,11 +6,11 @@
     <title>Sinoptico</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="/shared/main.css">
-    <script type="module" src="./index.mjs"></script>
+    <script type="module" src="./index.js"></script>
 </head>
 <body>
     <nav>
-        <img id="LogoElya" src="/shared/Logo_ELYA.png" alt="Logo de Empresa ELYA">
+        <img id="Logo" src="" alt="Logo de Empresa">
             <button>?</button>
             <button>?</button>
             <button>?</button>
@@ -20,8 +20,7 @@
     </nav>
 
     <main>
-        <object data="./svg-scada-arroyo.svg" type="image/svg+xml" id="ControlPanelSVG"></object>
-        <div id="force-symbols"></div>
+        <object data="./SVGARROYO.svg" type="image/svg+xml" id="ControlPanelSVG"></object>
     </main>
 </body>
 </html>
