Second Refactorice svg-item-manager + Creation of table-manager

--- a/SCADA_client/web/index/index.html
+++ b/SCADA_client/web/index/index.html
@@ -21,6 +21,9 @@
 
     <main>
         <object data="./SVGARROYO.svg" type="image/svg+xml" id="ControlPanelSVG"></object>
+
+        <table id="tabla-produccion"></table>
+        
     </main>
 </body>
 </html>
